# txtar

./: README.md  pyproject.toml
tests/: test_mockfs.py  test_txtar.py
txtar/: __init__.py  txtar.py
