[tool.poetry]
name = "txtar"
version = "0.1.1"
description = "Port of golang's txtar, a trivial tar-like format for unit tests"
authors = ["david <davidventura27@gmail.com>"]
homepage = "https://github.com/davidventura/txtar"
repository = "https://github.com/davidventura/txtar"
documentation = "https://github.com/davidventura/txtar"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyfakefs = "^5.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
mypy = ">0.990"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

